2017-01-24  Martin Baker
  
	* src/algebra/gpresent.spad: Add Todd-Coxeter algorithm

2017-01-22  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/interp/nruncomp.boot: Fix compilation of non-type
	values in types

2017-01-22  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/interp/interop.boot, src/interp/nrunfast.boot:
	Cleanup runtime

2017-01-12  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

        * src/interp/compiler.boot, src/interp/i-output.boot,
        src/interp/iterator.boot, src/interp/parse.boot,
        src/interp/property.lisp: Simplify 'parseTran'

2017-01-12  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/logic.spad, src/interp/category.boot,
	src/interp/interop.boot: Minor cleanups

2017-01-09  Qian Yun  <oldk1331@gmail.com>

	* src/algebra/integer.spad: Fix problem with 'latex(1)'

2017-01-01  Waldek Hebisch  <hebisch@math.uni.wroc.pl>
            Qian Yun  <oldk1331@gmail.com>

	Whitespace and comment cleanup

2017-01-01  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/interp/i-funsel.boot: remove useless code

2017-01-01  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/gdirprod.spad, src/algebra/list.spad,
	src/interp/parse.boot: remove parse transform of
	'reverse' and 'tails'

2016-11-13  Martin Baker  <ax87438@martinb.com>

	* src/algebra/gpresent.spad: Improve simplify, rename
	subgroup to quotient

2016-11-07  Qian Yun  <oldk1331@gmail.com>

	* src/algebra/pfr.spad: Add fractionalTerms

2016-11-06  Qian Yun  <oldk1331@gmail.com>

	* src/algebra/fparfrac.spad: Fix output of
	FullPartialFractionExpansion

2016-11-01  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/intaf.spad: Avoid spurious simplification

2016-10-15  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/combinat.spad, src/algebra/partperm.spad:
	Support odd and distinct partitions

2016-10-13  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/bezout.spad: Simplify

2016-10-13  Waldek Hebisch  <hebisch@math.uni.wroc.pl>